--- a/assets/style.css
+++ b/assets/style.css
@@ -4,7 +4,7 @@ body{
 
 footer{
     background-color: black;
-    color:aqua;
+    color:rgb(255, 255, 255);
    position:fixed;
     bootom:0;
     width: 100%;
