--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@ footer{
     background-color: black;
     color:rgb(255, 255, 255);
    position:fixed;
-    bootom:0;
+    bottom:0;
     width: 100%;
     height: 2rem;
 }
