--- a/assets/style.css
+++ b/assets/style.css
@@ -12,9 +12,14 @@ body{
     background-color: azure;
     height: 20rem;
     flex-grow:1;
+    flex-basis: calc(33% - 6rem);
 }
 
-
+.cartao__conteudo{
+    text-align: center;
+    background-color: azure;
+height: 100%;
+}
 
 
 
