--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 body{
-   background-color: bisque;
+   background-color: url('img/fundo-preto-da-parede-de-concreto-aspero-com-luzes-de-neon-e-luzes-brilhantes-efeito-de-luz-rosa-roxo-e-azul-na-parede-de-cimento-vazia_35257-949.avif');
    font-family: Bai Jamjuree;
 }
 
