--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,10 @@
+:root {
+    --text-color: #DBE4EF;
+    --card-front-color: #144480;
+    --card-back-color: #00F4BF;
+}
+
+
 body{
    background-color: url('img/fundo-preto-da-parede-de-concreto-aspero-com-luzes-de-neon-e-luzes-brilhantes-efeito-de-luz-rosa-roxo-e-azul-na-parede-de-cimento-vazia_35257-949.avif');
    font-family: Bai Jamjuree;
@@ -9,20 +16,22 @@ body{
 
 .cartao{
     margin:1rem 1rem;
-    background-color: azure;
+
     height: 20rem;
     flex-grow:1;
     flex-basis: calc(33% - 6rem);
 }
 
 .cartao__conteudo{
+    background-color: var(--card-front-color);
     text-align: center;
     background-color: azure;
 height: 100%;
 }
 
 .cartao__conteudo h3{
-    background-color: pink;
+color: var(--text-color);
+border: 1px solid var(--text-color);
     text-align: left;
     padding: 0.5rem;
     position:absolute;
