--- a/assets/style.css
+++ b/assets/style.css
@@ -48,6 +48,12 @@ border: 1px solid var(--text-color);
     color:var(--text-color)
 }
 
+.cartao__conteudo__resposta{
+    color:var(--card-back-color)
+}
+
+
+
 footer{
     background-color: black;
     color:rgb(255, 255, 255);
