--- a/assets/style.css
+++ b/assets/style.css
@@ -44,12 +44,14 @@ border: 1px solid var(--text-color);
 
 
 
-.cartao__conteudo__pergunta{
+.cartao__conteudo__pergunta p {
     color:var(--text-color)
+font: weight 500px;
 }
 
-.cartao__conteudo__resposta{
+.cartao__conteudo__resposta p {
     color:var(--card-back-color)
+    font: weight 700px;
 }
 
 
