--- a/assets/style.css
+++ b/assets/style.css
@@ -1,71 +1,70 @@
+
+
 :root {
     --text-color: #DBE4EF;
     --card-front-color: #144480;
     --card-back-color: #00F4BF;
 }
 
-
-body{
-   background: url('img/fundo-preto-da-parede-de-concreto-aspero-com-luzes-de-neon-e-luzes-brilhantes-efeito-de-luz-rosa-roxo-e-azul-na-parede-de-cimento-vazia_35257-949.avif');
-   font-family: Bai Jamjuree;
+body {
+    background: url('img/fundo-preto-da-parede-de-concreto-aspero-com-luzes-de-neon-e-luzes-brilhantes-efeito-de-luz-rosa-roxo-e-azul-na-parede-de-cimento-vazia_35257-949.avif');
+    font-family: Bai Jamjuree;
+    background-size: cover;
+    background-position: center;
 }
 
-#container{
-    display:flex;
+#container {
+    display: flex;
+    flex-wrap: wrap; /* Ensures the cards will wrap on smaller screens */
 }
 
-.cartao{
-    margin:1rem 1rem;
-
+.cartao {
+    margin: 1rem;
     height: 20rem;
-    flex-grow:1;
+    flex-grow: 1;
     flex-basis: calc(33% - 6rem);
 }
 
-.cartao__conteudo{
+.cartao__conteudo {
     background-color: var(--card-front-color);
     text-align: center;
-    background-color: azure;
-height: 100%;
+    background-color: azure; /* This will override the previous background color, consider removing one */
+    height: 100%;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
-.cartao__conteudo h3{
-color: var(--text-color);
-border: 1px solid var(--text-color);
+.cartao__conteudo h3 {
+    color: var(--text-color);
+    border: 1px solid var(--text-color);
     text-align: left;
     padding: 0.5rem;
-    position:absolute;
+    position: absolute;
     margin: 0.6rem;
     border-radius: 0.6rem;
-    font-size:1vw;
+    font-size: 1vw;
 }
 
-
-
-
-
 .cartao__conteudo__pergunta p {
-    color:var(--text-color)
-font: weight 500px;
+    color: var(--text-color);
+    font-weight: 500;
 }
 
 .cartao__conteudo__resposta p {
-    color:var(--card-back-color)
-    font: weight 700px;
+    color: var(--card-back-color);
+    font-weight: 700;
 }
 
-
-
-footer{
+footer {
     background-color: black;
-    color:rgb(255, 255, 255);
-   position:fixed;
-    bottom:0;
+    color: rgb(255, 255, 255);
+    position: fixed;
+    bottom: 0;
     width: 100%;
     height: 2rem;
 }
 
-footer p{
+footer p {
     text-align: center;
     font-size: 0.7rem;
     margin-top: 0.5rem;
