--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,3 @@
-
-
 :root {
     --text-color: #DBE4EF;
     --card-front-color: #144480;
@@ -54,6 +52,18 @@ body {
     color: var(--card-back-color);
     font-weight: 700;
 }
+
+.cartao:hover .cartao__conteudo{
+    transform:rotateY(180deg)
+}
+
+
+
+
+
+
+
+
 
 footer {
     background-color: black;
