--- a/assets/style.css
+++ b/assets/style.css
@@ -31,7 +31,7 @@ body {
     border-radius: 10px;
     overflow: hidden;
     transform-style: preserve-3d;
-
+transition:transform 300ms ease-in-out;
 }
 
 .cartao__conteudo h3 {
