--- a/assets/style.css
+++ b/assets/style.css
@@ -43,6 +43,7 @@ transition:transform 300ms ease-in-out;
     margin: 0.6rem;
     border-radius: 0.6rem;
     font-size: 1vw;
+    backface-visibility: hidden;
 }
 
 .cartao__conteudo__pergunta p {
