--- a/assets/style.css
+++ b/assets/style.css
@@ -61,7 +61,10 @@ transition:transform 300ms ease-in-out;
 }
 
 
-
+.cartao__conteudo__pergunta,
+.cartao__conteudo__resposta{
+    backface-visibility:hidden ;
+}
 
 
 
