--- a/assets/style.css
+++ b/assets/style.css
@@ -64,6 +64,9 @@ transition:transform 300ms ease-in-out;
 .cartao__conteudo__pergunta,
 .cartao__conteudo__resposta{
     backface-visibility:hidden ;
+    position:absolute;
+    height: 100%;
+    width: 100%;
 }
 
 .cartao__conteudo__resposta{
