--- a/assets/style.css
+++ b/assets/style.css
@@ -44,6 +44,7 @@ transition:transform 300ms ease-in-out;
     border-radius: 0.6rem;
     font-size: 1vw;
     backface-visibility: hidden;
+    margin-top: 4rem;
 }
 
 .cartao__conteudo__pergunta p {
